tests/snapshots/examples_fixtures/base__all_phase3.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/base/all_phase3.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Effect

requires effect `IO` but the enclosing context does not provide it

  examples/base/all_phase3.flx:5:1
  |
5 | Base.print("== Base directives smoke ==");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ----------------------------------------- requires `IO`

Hint:
  annotate the enclosing function with `with IO`


error[E400]: Missing Effect

requires effect `IO` but the enclosing context does not provide it

  examples/base/all_phase3.flx:6:1
  |
6 | Base.print("len([1,2,3]) = " + to_string(len([1, 2, 3])));
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | --------------------------------------------------------- requires `IO`

Hint:
  annotate the enclosing function with `with IO`

Found 2 errors.
== stdout ==
<not executed>
