tests/snapshots/examples_fixtures/base__base_shadowing_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/base/base_shadowing_ok.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/base/base_shadowing_ok.flx:12:1
   |
12 | demo();
   | ^^^^^^^
   | ------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/base/base_shadowing_ok.flx:12:1
   |
12 | demo();
   | ^^^^^^^
   | ------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.

Found 2 errors.
== stdout ==
<not executed>
