tests/snapshots/examples_fixtures/base__base_unknown_except_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/base/base_unknown_except_error.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E080]: UNKNOWN BASE MEMBER

Base has no member named `does_not_exist`.

  --> examples/base/base_unknown_except_error.flx:3:1
  |
3 | import Base except [does_not_exist]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Check the Base surface or remove this name from `except`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/base/base_unknown_except_error.flx:4:1
  |
4 | print("unreachable");
  | ^^^^^^^^^^^^^^^^^^^^^
  | --------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/base/base_unknown_except_error.flx:4:1
  |
4 | print("unreachable");
  | ^^^^^^^^^^^^^^^^^^^^^
  | --------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.

Found 3 errors.
== stdout ==
<not executed>
