tests/snapshots/examples_fixtures/base__base_unknown_member_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/base/base_unknown_member_error.flx
== compile ==
failed (compile)
== diagnostics ==
error[E080]: Unknown Base Member

Base has no member named `not_real`.

  examples/base/base_unknown_member_error.flx:3:1
  |
3 | Base.not_real();
  | ^^^^^^^^^^^^^

Hint:
  Check the Base surface or remove this name from `except`.
== stdout ==
<not executed>
